<resources>
    <string name="app_name">Le Ciné</string>
    <string name="rb_most_popular">Most Popular</string>
    <string name="rb_highest_rated">Highest Rated</string>
    <string name="rb_newest">Newest</string>
    <string name="rb_favourite">Favourite</string>
    <string name="detail_summary">Summary</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_switch">Switch</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_share">Share</string>
    <string name="casts">Cast</string>
    <string name="person_detail_bio">Biography</string>
    <string name="movies">Movies</string>
    <string name="person_detail_facts">Facts</string>
    <string name="person_detail_born">Born</string>
    <string name="person_detail_died">Died</string>
    <string name="person_detail_birthplace">Birthplace</string>
    <string name="person_detail_homepage">Homepage</string>
    <string name="person_detail_also_known_as">Also Known As</string>
    <string name="person_detail_age">Age</string>
</resources>
