<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey">

    <TextView
            android:id="@+id/person_detail_fact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_detail_facts"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/person_detail_born_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/person_detail_born"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_fact_title"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/person_detail_born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_born_title"
            tools:text="28th Dec 1922"
    />

    <TextView
            android:id="@+id/person_detail_died_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/person_detail_died"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_born"
    />

    <TextView
            android:id="@+id/person_detail_died"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_died_title"
            tools:text="12th Nov 2018"
    />

    <TextView
            android:id="@+id/person_detail_birthplace_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/person_detail_birthplace"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_died"
    />

    <TextView
            android:id="@+id/person_detail_birthplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_birthplace_title"
            tools:text="New York City, New York, USA"
    />

    <TextView
            android:id="@+id/person_detail_homepage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/person_detail_homepage"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_birthplace"
    />

    <TextView
            android:id="@+id/person_detail_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_homepage_title"
            tools:text="http://therealstanlee.com/"
    />

    <TextView
            android:id="@+id/person_detail_also_known_as_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/person_detail_also_known_as"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_homepage"
    />

    <TextView
            android:id="@+id/person_detail_also_known_as"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_also_known_as_title"
            tools:text="The Man, ..."
    />

    <TextView
            android:id="@+id/person_detail_age_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/person_detail_age"
            android:layout_marginTop="16dp"
            android:layout_marginStart="260dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_fact_title"
    />

    <TextView
            android:id="@+id/person_detail_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_detail_fact_title"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:layout_marginStart="260dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/person_detail_age_title"
            tools:text="95"
    />
</android.support.constraint.ConstraintLayout>